build/log/idf_py_stderr_output_374513
/home/yurijn/Documents/lvgl-port/main/main.cpp: In function 'esp_err_t init()':
/home/yurijn/Documents/lvgl-port/main/main.cpp:252:112: error: 'LCDIOINIT' was not declared in this scope
  252 |     lv_display_t *display = lv_st7789_create(LCD_H_RES, LCD_V_RES, LV_LCD_FLAG_NONE,(lv_st7789_send_cmd_cb_t)  LCDIOINIT, (lv_st7789_send_color_cb_t) my_lcd_send_color);
      |                                                                                                                ^~~~~~~~~
/home/yurijn/Documents/lvgl-port/main/main.cpp:252:123: warning: cast between incompatible function types from 'void (* (*)(lv_display_t*, const uint8_t*, size_t, uint8_t*, size_t))(lv_display_t*, const uint8_t*, size_t, uint8_t*, size_t)' {aka 'void (* (*)(_lv_display_t*, const unsigned char*, unsigned int, unsigned char*, unsigned int))(_lv_display_t*, const unsigned char*, unsigned int, unsigned char*, unsigned int)'} to 'lv_st7789_send_color_cb_t' {aka 'void (*)(_lv_display_t*, const unsigned char*, unsigned int, unsigned char*, unsigned int)'} [-Wcast-function-type]
  252 |     lv_display_t *display = lv_st7789_create(LCD_H_RES, LCD_V_RES, LV_LCD_FLAG_NONE,(lv_st7789_send_cmd_cb_t)  LCDIOINIT, (lv_st7789_send_color_cb_t) my_lcd_send_color);
      |                                                                                                                           ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/yurijn/Documents/lvgl-port/main/main.cpp:256:38: warning: cast between incompatible function types from 'void (* (*)(lv_display_t*, const lv_area_t*, uint8_t*))(lv_display_t*, const lv_area_t*, uint8_t*)' {aka 'void (* (*)(_lv_display_t*, const lv_area_t*, unsigned char*))(_lv_display_t*, const lv_area_t*, unsigned char*)'} to 'lv_display_flush_cb_t' {aka 'void (*)(_lv_display_t*, const lv_area_t*, unsigned char*)'} [-Wcast-function-type]
  256 |     lv_display_set_flush_cb(display, (lv_display_flush_cb_t)flushcb);
      |                                      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:76: esp-idf/main/CMakeFiles/__idf_main.dir/main.cpp.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:4790: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
make: *** [Makefile:136: all] Error 2
